@@ -25,6 +25,7 @@ Changes in 4.1:
 - Show notifications when automatic update of IP filter fails (243458)
 - Add video streaming support (234212)
 - Make ratio configurable at which the share ratio becomes green (254144)
+- Don't show an error message for each duplicate tracker which is added
 
 Changes in 4.0.5:
 - Fix crash due to uncaught exception when creating torrent (255020)
